--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@ html, body {
     padding: 0%;
     width: 100%;
     height: 100vh;
-    background: #121212;
+    background: #171718;
+
 }
 
 
@@ -22,15 +23,22 @@ img {
 
  */
 .title{
+    /* position: absolute; */
     
     display: flex;
     justify-content: center;
-    color: rgb(202, 205, 207);
 }
 .name {
+    color: rgb(202, 205, 207);
     position: absolute;
-    /* text-align: center; */
-    font-size: 80px;
+    font-family: 'Passion One', cursive;
+    font-size: 100px;
+}
+.job {
+    color: rgb(202, 205, 207);
+    position: absolute;
+    font-family: 'Passion One', cursive;
+    font-size: 100px;
 }
 
 /* #fondecran {
@@ -60,7 +68,7 @@ img {
     position: absolute;
     z-index: 2;
     width: 50%;
-    opacity: 0.7;    
+    /* opacity: 0.7;     */
 } 
 
 .ringOne img {
