--- a/style.css
+++ b/style.css
@@ -12,8 +12,6 @@ body{
 
 /* ////////////////////////////////////////////// NAV /////////////////////////////////////////////////// */
 
-
-
 .opaque-navbar {
     background-color: #222a35 !important;
     height: 55px;
@@ -51,20 +49,57 @@ body{
     color: #ececec !important;
 
   }
-  
+/* effect menu */
+  .nav-formation:after{
+    display: block;
+    content: '';
+    border-bottom: solid 1px var(--green);
+    transform: scaleX(0);
+    transition: transform 250ms ease-in-out;
+  }
 
-  
-  /* .navbar-toggler-icon {
-    color: #fff !important;
+  .nav-formation:hover:after{
+    transform: scaleX(1);
+  }
 
-    float: right;
-  } */
+  .nav-experience:after{
+    display: block;
+    content: '';
+    border-bottom: solid 1px var(--green);
+    transform: scaleX(0);
+    transition: transform 250ms ease-in-out;
+  }
+
+  .nav-experience:hover:after{
+    transform: scaleX(1);
+  }
+
+  .nav-skills:after{
+    display: block;
+    content: '';
+    border-bottom: solid 1px var(--green);
+    transform: scaleX(0);
+    transition: transform 250ms ease-in-out;
+  }
+
+  .nav-skills:hover:after{
+    transform: scaleX(1);
+  }
+
+  .nav-contact:after{
+    display: block;
+    content: '';
+    border-bottom: solid 1px var(--green);
+    transform: scaleX(0);
+    transition: transform 250ms ease-in-out;
+  }
+
+  .nav-contact:hover:after{
+    transform: scaleX(1);
+  }
   
-  /* .navbar-header {
-    background-color: rgb(20, 54, 207);
-    float: right;
-  } */
-  
+  /* ////////////////////////////////////////////// HOME /////////////////////////////////////////////////// */
+
   .home {
     height: 100vh;
     width: 100%;
