--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     font-size: 120%;
     padding-top: 2px;
   }
-  /*  */
+
   .opaque-navbar.opaque {
     background-color: red !important;
     height: 58px;
@@ -109,24 +109,14 @@ body{
   .wrapper {
     position: absolute;
     width: 80vw;
-    top: 55%;
+    top: 50%;
     left: 57%;
     transform: translate(-50%, -50%);
     background-attachment: fixed;
   }
-  /* .logo {
-    font-family: Poppins;
-    line-height: 80px;
-    margin-left: 2em;
-    color: var(--logo);
-    font-size: 15px;
-    letter-spacing: 3px;
-    font-weight: bold;
-    text-transform: uppercase;
-  } */
   
   h1.letters.name {
-    margin-bottom: 1.3em;
+    margin-bottom: 1.1em;
   }
   
   .name {
@@ -134,7 +124,7 @@ body{
     font-family: 'Lato', sans-serif;
     font-weight: 100;
     font-size: 5em;
-    font-size: 4vw; 
+    font-size: 3.5vw; 
     margin-bottom: 0px;
   }
   
@@ -159,49 +149,40 @@ body{
     padding-bottom: 0.1em;
     overflow: hidden;
     font-family: 'Lato', sans-serif;
-  
   }
   
   .ml7 .letter {
     transform-origin: 0 100%;
     display: inline-block;
     line-height: 1em;
-    font-size: 5vw;
-  
+    font-size: 5vw; 
   }
-  
-  .about {
-    top: 900px;
-  }
-  
-  .menu {
-    position: absolute;
-    color: var(--green);
-    right: 2em;
-    top: 4px;
-    line-height: 80px;
-    z-index: 100;
-  }
-  
-  .menu ion-icon {
-    position: fixed;
-    font-size: 24px;
-  }
-  
-  .buttons {
-    margin-top: 60px;
-  }
-  
-  .btnContact {
-    background: var(--green);
-    border: none;
-    padding: 14px 30px;
-    color: #fff;
-    font-size: 12px !important;
-    letter-spacing: 4px;
+   
+  /* button contact */
+  .btn-contact{
+    margin-top: 90px;
+    width: 18rem !important;
+    text-align: center !important;
+    padding: 10px 18px;
+    background-color: var(--green);
+    font-size: 18px !important;
+    border-radius: 3px;
+    transition: all 0.3s ease;
+    
+  }.btn-contact a{
+    width: 100%;
+    text-decoration: none;
+    letter-spacing: 6px;
     font-weight: 300;
+    color: #fff;
+
   }
-  
+  .btn-contact:hover{
+    -webkit-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    transform: scale(1.05);
+  }
+  /* Button media */
   .media {
     position: absolute;
     top: 38%;
@@ -211,6 +192,13 @@ body{
   }
   .logo-media{
     width: 20px;
+    transition: all 0.3s ease;
+  }
+
+  .logo-media:hover{
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
   }
   
   .media ul {
@@ -223,7 +211,7 @@ body{
     display: inline-block !important;
     cursor: pointer;
   }
-  
+  /* copyright */
   .copyright {
     position: absolute;
     z-index: 1;
@@ -236,9 +224,8 @@ body{
     bottom: 40px;
   }
 
+  /* ////////////////////////////////////////////// FORMATION /////////////////////////////////////////////////// */
 
-
-  /*  */
   .bgimg-2 {
     background-image: url('img/route.jpg');
     min-height: 400px;
@@ -247,4 +234,6 @@ body{
     background-attachment: fixed;
     opacity: 0.5;
   }
-  
+  .about {
+    top: 900px;
+  }
