--- a/style.css
+++ b/style.css
@@ -123,8 +123,8 @@ body{
     color: #fff;
     font-family: 'Lato', sans-serif;
     font-weight: 100;
-    font-size: 5em;
-    font-size: 3.5vw; 
+    font-size: 5rem;
+    /* font-size: 3.5vw;  */
     margin-bottom: 0px;
   }
   
@@ -155,24 +155,24 @@ body{
     transform-origin: 0 100%;
     display: inline-block;
     line-height: 1em;
-    font-size: 5vw; 
+    font-size: 100%; 
   }
    
   /* button contact */
   .btn-contact{
     margin-top: 90px;
-    width: 18rem !important;
+    width: 14rem !important;
     text-align: center !important;
     padding: 10px 18px;
     background-color: var(--green);
-    font-size: 18px !important;
+    font-size: 14px !important;
     border-radius: 3px;
     transition: all 0.3s ease;
     
   }.btn-contact a{
     width: 100%;
     text-decoration: none;
-    letter-spacing: 6px;
+    letter-spacing: 4px;
     font-weight: 300;
     color: #fff;
 
@@ -184,10 +184,12 @@ body{
   }
   /* Button media */
   .media {
-    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    position: relative;
     top: 38%;
-    right: 6%;
-    font-size: 1.5em;
+    right: 1%;
     overflow: visible;
   }
   .logo-media{
@@ -202,13 +204,12 @@ body{
   }
   
   .media ul {
-    position: absolute;
     list-style: none;
   }
   
   .media ul li {
     padding: 12px 0;
-    display: inline-block !important;
+    /* display: inline-block !important; */
     cursor: pointer;
   }
   /* copyright */
