--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300');
 @import url('https://fonts.googleapis.com/css?family=Lato:100');
 
-body{
+body {
     --color-fond: #222a35 !important;
     --logo: #eee;
     --green: #24aa60;
@@ -18,15 +18,15 @@ body{
     transition: background-color .5s ease 0s;
     font-size: 120%;
     padding-top: 2px;
-  }
+}
 
-  .opaque-navbar.opaque {
+.opaque-navbar.opaque {
     background-color: red !important;
     height: 58px;
     transition: background-color .5s ease 0s;
-  }
+}
 
- .navbar-brand{
+.navbar-brand {
     color: #ececec !important;
     font-family: Poppins;
     font-size: 15px;
@@ -36,112 +36,113 @@ body{
     line-height: 2;
 }
 
-.collapse{
-  display: flex;
-  justify-content: flex-end;
-  font-size: 15px;
-  font-family: Roboto;
-  font-weight: 100 !important;
-  margin-right: 40px;
+.collapse {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 15px;
+    font-family: Roboto;
+    font-weight: 100 !important;
+    margin-right: 40px;
 }
 
- li a {
+li a {
     color: #ececec !important;
 
-  }
+}
+
 /* effect menu */
-  .nav-formation:after{
+.nav-school:after {
     display: block;
     content: '';
     border-bottom: solid 1px var(--green);
     transform: scaleX(0);
     transition: transform 250ms ease-in-out;
-  }
+}
 
-  .nav-formation:hover:after{
+.nav-school:hover:after {
     transform: scaleX(1);
-  }
+}
 
-  .nav-experience:after{
+.nav-job:after {
     display: block;
     content: '';
     border-bottom: solid 1px var(--green);
     transform: scaleX(0);
     transition: transform 250ms ease-in-out;
-  }
+}
 
-  .nav-experience:hover:after{
+.nav-job:hover:after {
     transform: scaleX(1);
-  }
+}
 
-  .nav-skills:after{
+.nav-skills:after {
     display: block;
     content: '';
     border-bottom: solid 1px var(--green);
     transform: scaleX(0);
     transition: transform 250ms ease-in-out;
-  }
+}
 
-  .nav-skills:hover:after{
+.nav-skills:hover:after {
     transform: scaleX(1);
-  }
+}
 
-  .nav-contact:after{
+.nav-contact:after {
     display: block;
     content: '';
     border-bottom: solid 1px var(--green);
     transform: scaleX(0);
     transition: transform 250ms ease-in-out;
-  }
+}
 
-  .nav-contact:hover:after{
+.nav-contact:hover:after {
     transform: scaleX(1);
-  }
-  
-  /* ////////////////////////////////////////////// HOME /////////////////////////////////////////////////// */
+}
 
-  .home {
+/* ////////////////////////////////////////////// HOME /////////////////////////////////////////////////// */
+
+.home {
     height: 100vh;
     width: 100%;
     background-color: var(--color-fond);
-  }
-  
-  .wrapper {
+}
+
+.wrapper {
     position: absolute;
     width: 80vw;
     top: 50%;
     left: 57%;
     transform: translate(-50%, -50%);
     background-attachment: fixed;
-  }
-  
-  h1.letters.name {
+}
+
+h1.letters.name {
     margin-bottom: 1.1em;
-  }
-  
-  .name {
+}
+
+.name {
     color: #fff;
     font-family: 'Lato', sans-serif;
     font-weight: 100;
     font-size: 5rem;
     /* font-size: 3.5vw;  */
     margin-bottom: 0px;
-  }
-  
-  h1.ml7.text-wrapper {
+}
+
+h1.ml7.text-wrapper {
     position: absolute;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     letter-spacing: 3px;
-  }
-  
-  .ml7 {
+}
+
+.ml7 {
     position: relative;
     font-weight: 100;
-  }
-  
-  .ml7 .text-wrapper {
+}
+
+.ml7 .text-wrapper {
     position: relative;
     display: inline-block;
     padding-top: 0.2em;
@@ -149,17 +150,17 @@ body{
     padding-bottom: 0.1em;
     overflow: hidden;
     font-family: 'Lato', sans-serif;
-  }
-  
-  .ml7 .letter {
+}
+
+.ml7 .letter {
     transform-origin: 0 100%;
     display: inline-block;
     line-height: 1em;
-    font-size: 100%; 
-  }
-   
-  /* button contact */
-  .btn-contact{
+    font-size: 100%;
+}
+
+/* button contact */
+.btn-contact {
     margin-top: 90px;
     width: 14rem !important;
     text-align: center !important;
@@ -168,22 +169,26 @@ body{
     font-size: 14px !important;
     border-radius: 3px;
     transition: all 0.3s ease;
-    
-  }.btn-contact a{
+
+}
+
+.btn-contact a {
     width: 100%;
     text-decoration: none;
     letter-spacing: 4px;
     font-weight: 300;
     color: #fff;
 
-  }
-  .btn-contact:hover{
+}
+
+.btn-contact:hover {
     -webkit-transform: scale(1.05);
     -ms-transform: scale(1.05);
     transform: scale(1.05);
-  }
-  /* Button media */
-  .media {
+}
+
+/* Button media */
+.media {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -191,29 +196,31 @@ body{
     top: 38%;
     right: 1%;
     overflow: visible;
-  }
-  .logo-media{
+}
+
+.logo-media {
     width: 20px;
     transition: all 0.3s ease;
-  }
+}
 
-  .logo-media:hover{
+.logo-media:hover {
     -webkit-transform: scale(1.3);
     -ms-transform: scale(1.3);
     transform: scale(1.3);
-  }
-  
-  .media ul {
+}
+
+.media ul {
     list-style: none;
-  }
-  
-  .media ul li {
+}
+
+.media ul li {
     padding: 12px 0;
     /* display: inline-block !important; */
     cursor: pointer;
-  }
-  /* copyright */
-  .copyright {
+}
+
+/* copyright */
+.copyright {
     position: absolute;
     z-index: 1;
     color: grey;
@@ -223,18 +230,50 @@ body{
     font-weight: 100;
     margin-right: 2em;
     bottom: 40px;
-  }
+}
 
-  /* ////////////////////////////////////////////// FORMATION /////////////////////////////////////////////////// */
+/* ////////////////////////////////////////////// FORMATION /////////////////////////////////////////////////// */
 
-  .bgimg-2 {
+.bgimg-1 {
+    background-image: url('img/school.jpeg');
+    min-height: 400px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    opacity: 0.5;
+}
+
+.about {
+    top: 900px;
+}
+
+/* ////////////////////////////////////////////// EXPERIENCES /////////////////////////////////////////////////// */
+
+.bgimg-2 {
     background-image: url('img/route.jpg');
     min-height: 400px;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     opacity: 0.5;
-  }
-  .about {
-    top: 900px;
-  }
+}
+/* ////////////////////////////////////////////// EXPERIENCES /////////////////////////////////////////////////// */
+
+.bgimg-3 {
+    background-image: url('img/skills.jpeg');
+    min-height: 400px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    opacity: 0.5;
+}
+/* ////////////////////////////////////////////// EXPERIENCES /////////////////////////////////////////////////// */
+
+.bgimg-2 {
+    background-image: url('img/contact.jpeg');
+    min-height: 400px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    opacity: 0.5;
+}
