--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .opaque-navbar.opaque {
-    background-color: red !important;
+    background-color: #24aa60 !important;
     height: 58px;
     transition: background-color .5s ease 0s;
 }
@@ -124,7 +124,7 @@ h1.letters.name {
     color: #fff;
     font-family: 'Lato', sans-serif;
     font-weight: 100;
-    font-size: 5rem;
+    font-size: 4rem;
     /* font-size: 3.5vw;  */
     margin-bottom: 0px;
 }
@@ -156,36 +156,30 @@ h1.ml7.text-wrapper {
     transform-origin: 0 100%;
     display: inline-block;
     line-height: 1em;
-    font-size: 100%;
+    font-size: 6rem;
 }
 
-/* button contact */
-.btn-contact {
-    margin-top: 90px;
-    width: 14rem !important;
-    text-align: center !important;
-    padding: 10px 18px;
-    background-color: var(--green);
-    font-size: 14px !important;
-    border-radius: 3px;
-    transition: all 0.3s ease;
-
-}
-
-.btn-contact a {
-    width: 100%;
-    text-decoration: none;
-    letter-spacing: 4px;
-    font-weight: 300;
-    color: #fff;
-
-}
-
-.btn-contact:hover {
+/* Button contact */
+.btnContact:hover {
     -webkit-transform: scale(1.05);
     -ms-transform: scale(1.05);
-    transform: scale(1.05);
-}
+    transform: scale(1.05) !important;
+} 
+
+.btnContact {
+    margin-top: 60px;
+    border-radius: 1px;
+    background: var(--green);
+    border: none;
+    padding: 14px 30px;
+    color: #fff;
+    font-size: 12px !important;
+    letter-spacing: 4px;
+    font-weight: 300;
+    outline: 0 !important;
+    transition: all 0.3s ease;
+    outline: none;
+  }
 
 /* Button media */
 .media {
@@ -269,7 +263,104 @@ h1.ml7.text-wrapper {
 }
 /* ////////////////////////////////////////////// EXPERIENCES /////////////////////////////////////////////////// */
 
-.bgimg-2 {
+.choose {
+    padding-top: 10%;
+    padding-bottom: 7%;
+    font: 17px "Oswald", sans-serif;
+    letter-spacing: 10px;
+    text-align: center;
+  }
+
+  .logo-techno{
+      width: 2rem;
+      height: 2rem;
+  }
+  .social{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  .social-logo{
+      width: 2rem;
+  }
+  
+  .social-header {
+    font: 14px "Oswald", sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+    padding-top: 20px;
+    letter-spacing: 7px;
+  }
+  
+  .social-feature {
+    font: 12px 'Montserrat', sans-serif;
+    color: #404040;
+    letter-spacing: 1.5px;
+    line-height: 19px;
+    text-align: left;
+    padding-bottom: 20%;
+  }
+  
+
+
+
+
+
+
+
+
+/* /////////////////////////////////// CONTACT //////////////////// */
+.contact-title {
+    padding-top: 5%;
+    padding-bottom: 6%;
+    font: 20px "Oswald", sans-serif;
+    letter-spacing: 20px;
+    text-align: center;
+  }
+
+  .container-contact{
+      justify-content: space-around;
+  }
+
+  .item-contact{
+      min-width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  
+  .logo-contact{
+      width: 2rem;
+  }
+  
+  
+  .contact-icons {
+
+    font-size: 30px;
+    letter-spacing: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+    
+  .contact-header {
+    font: 14px "Doris", sans-serif;
+    padding-top: 20px;
+    letter-spacing: 7px;
+    text-transform: uppercase;
+  }
+  
+  .contact-feature {
+      width: 100%;
+    font: 12px 'Montserrat', sans-serif;
+    color: #404040;
+    letter-spacing: 1.5px;
+    line-height: 19px;
+    text-align: center;
+    padding-bottom: 20%;
+  
+  }
+
+  .bgimg-2 {
     background-image: url('img/contact.jpeg');
     min-height: 400px;
     background-size: cover;
