--- a/style.css
+++ b/style.css
@@ -271,9 +271,16 @@ h1.ml7.text-wrapper {
     text-align: center;
   }
 
-  .logo-techno{
-      width: 10px !important;
-      height: 10px !important;
+  .container-logos{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+  }
+
+  .logos-techno{
+      width: 100px !important;
+      height: 100px !important;
+      margin: 0 20px;
   }
   .social{
       display: flex;
