--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300');
 @import url('https://fonts.googleapis.com/css?family=Lato:100');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
 
 *, ::before, ::after{
     --color-fond: #222a35 !important;
@@ -9,17 +10,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* background-color: #000; */
-    
 }
-/* body {
-    --color-fond: #222a35 !important;
-    --logo: #eee;
-    --green: #24aa60;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-} */
 
 /* ////////////////////////////////////////////// NAV /////////////////////////////////////////////////// */
 
@@ -234,6 +225,9 @@ h1.ml7.text-wrapper {
 }
 
 /* ////////////////////////////////////////////// SCHOOL /////////////////////////////////////////////////// */
+.container-formations{
+    height: 80vh;
+}
 .title-section {
     padding-top: 5%;
     padding-bottom: 4%;
@@ -270,6 +264,7 @@ h1.ml7.text-wrapper {
 
 .step{
     margin-bottom: 2rem;
+    background-color: rgb(248, 247, 247);
     -webkit-box-shadow: 0px 9px 12px 0px rgba(0,0,0,0.19);
     -moz-box-shadow: 0px 9px 12px 0px rgba(0,0,0,0.19);
     box-shadow: 0px 9px 12px 0px rgba(0,0,0,0.19);
@@ -283,7 +278,7 @@ h1.ml7.text-wrapper {
 }
 
 .ligne{
-    height: 1000px;
+    height: 1300px;
     margin-bottom: 30px !important;
     width: 8px;
     margin: 0 auto;
@@ -350,6 +345,24 @@ box-shadow: 9px 9px 31px -7px rgba(0,0,0,0.83);
 .b4{
     margin-top:940px;
     left: calc(50% + 230px)
+}
+
+.box p:nth-child(4){
+    color: red;
+    font-weight: 700;
+    font-family: 'lato' sans-serif;
+}
+
+.logo-entreprise-arc{
+    width: 4rem;
+}
+
+.logo-entreprise-soupl{
+    width: 8rem;
+}
+
+.logo-entreprise-68{
+    width: 3.5rem;
 }
 /* ////////////////////////////////////////////// COMMUN /////////////////////////////////////////////////// */
 
