--- a/style.css
+++ b/style.css
@@ -226,6 +226,8 @@ h1.ml7.text-wrapper {
 
 /* ////////////////////////////////////////////// SCHOOL /////////////////////////////////////////////////// */
 .container-formations{
+    /* display: flex !important;
+    flex-wrap: wrap !important; */
     height: 80vh;
 }
 .title-section {
@@ -263,6 +265,9 @@ h1.ml7.text-wrapper {
 }
 
 .step{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     margin-bottom: 2rem;
     background-color: rgb(248, 247, 247);
     -webkit-box-shadow: 0px 9px 12px 0px rgba(0,0,0,0.19);
@@ -492,7 +497,7 @@ h1.ml7.text-wrapper {
 }
 
 /* /////////////////////////////////////////////////////// MEDIA QUERY ///////////////////////////////////////////////////////// */
-@media screen and (max-width:520px){
+@media screen and (max-width:575px){
     .title-section{
         font-size: 15px;
         font-weight: 900;
@@ -506,7 +511,12 @@ h1.ml7.text-wrapper {
         margin-bottom: 80px;
     }
     .ml7 .letter{
-        font-size: 2.5rem;
+        font-size: 2.3rem;
+    }
+    .step{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
     }
 }
 
@@ -522,6 +532,8 @@ h1.ml7.text-wrapper {
     .box {
         left: calc(50% - 400px)
     }
+
+    
 
 }
 
