--- a/style.css
+++ b/style.css
@@ -330,6 +330,11 @@ h1.ml7.text-wrapper {
     width: 3rem;
 }
 
+.title-experience{
+display: flex;
+justify-content: space-between;
+}
+
 .box{
     position: absolute;
     color:#333;
@@ -374,6 +379,7 @@ h1.ml7.text-wrapper {
 
 .logo-entreprise-soupl{
     width: 8rem;
+    height: auto;
 }
 
 .logo-entreprise-68{
@@ -448,12 +454,23 @@ h1.ml7.text-wrapper {
     background-attachment: fixed;
     opacity: 0.5;
 }
+
+/* .title-contact{
+display: flex;
+justify-content: center;
+} */
+
 .contact-title {
     padding-top: 5%;
     padding-bottom: 6%;
     font: 20px "Oswald", sans-serif;
     letter-spacing: 20px;
     text-align: center;
+  }
+
+  .signature{
+      margin-left: 10rem;
+      position: absolute;
   }
 
   .container-contact{
@@ -525,6 +542,12 @@ h1.ml7.text-wrapper {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
+    }
+    .logos-techno{
+        width: 40px !important;
+        height: 40px !important;
+        margin: 5px 5px;
+        opacity: .7;
     }
 }
 
