--- a/style.css
+++ b/style.css
@@ -540,6 +540,16 @@ h1.ml7.text-wrapper {
         margin: 5px 5px;
         opacity: .7;
     }
+    .bgimg-3 {
+        background-image: url('img/skillsm.jpg');
+        background-position: center;
+        width: 100%;
+        min-height: 200px;
+        background-size: auto;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        opacity: 0.5;
+    }
 }
 
 @media screen and (max-width: 1300px) {
