--- a/style.css
+++ b/style.css
@@ -299,8 +299,8 @@ h1.ml7.text-wrapper {
 }
 
 .rond{
-    width: 80px;
-    height: 80px;
+    width: 4rem;
+    height: 4rem;
     border-radius: 50%;
     background-color: var(--color-fond);
     position: absolute;
@@ -540,12 +540,42 @@ h1.ml7.text-wrapper {
         margin: 5px 5px;
         opacity: .7;
     }
-    .bgimg-3 {
-        background-image: url('img/skillsm.jpg');
-        background-position: center;
+    .bgimg-1 {
+        background-image: url('img/schoolm.jpg');
+        /* background-position: center; */
         width: 100%;
         min-height: 200px;
-        background-size: auto;
+        background-size: 100vw;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        opacity: 0.5;
+    }
+    .bgimg-2 {
+        background-image: url('img/routem.jpg');
+        /* background-position: center; */
+        width: 100%;
+        min-height: 200px;
+        background-size: 100vw;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        opacity: 0.5;
+    }
+    .bgimg-3 {
+        background-image: url('img/skillsm.jpg');
+        /* background-position: center; */
+        width: 100%;
+        min-height: 300px;
+        /* background-size: 100vw; */
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        opacity: 0.5;
+    }
+    .bgimg-4 {
+        background-image: url('img/contactm.jpg');
+        /* background-position: center; */
+        width: 100%;
+        min-height: 400px;
+        /* background-size: 100vw; */
         background-repeat: no-repeat;
         background-attachment: fixed;
         opacity: 0.5;
@@ -555,14 +585,21 @@ h1.ml7.text-wrapper {
 @media screen and (max-width: 1300px) {
 
     .ligne {
-        position: relative;
-        left: 400px;
+        /* position: relative;
+        left: 19rem; */
+        display: none;
     }
     .rond {
-        left: calc(50% + 400px);
+        /* left: calc(50% + 19rem); */
+        display: none;
     }
     .box {
-        left: calc(50% - 200px)
+        position: relative;
+        left: 0;
+    margin-top:10px;
+
+       /*  margin-left: 10px;
+        width: 80%; */
     }
     
 
