--- a/style.css
+++ b/style.css
@@ -28,12 +28,12 @@
     transition: background-color .5s ease 0s;
 }
 
-.navbar-brand {
+ .navbar-brand {
     color: #ececec !important;
-    font-family: 'lato' sans-serif;
+    font-family: 'lato' sans-serif !important;
     font-size: 15px;
     letter-spacing: 5px;
-    font-weight: bold;
+    font-weight: 100;
     text-transform: uppercase;
     line-height: 2;
 }
@@ -45,7 +45,7 @@
     font-family: Roboto;
     font-weight: 100 !important;
     margin-right: 40px;
-}
+} 
 
 li a {
     color: #ececec !important;
@@ -171,7 +171,7 @@ h1.ml7.text-wrapper {
     background: var(--green);
     border: none;
     padding: 14px 30px;
-    color: #fff;
+    color: var(--logo);
     font-size: 12px !important;
     letter-spacing: 4px;
     font-weight: 300;
@@ -268,6 +268,7 @@ h1.ml7.text-wrapper {
     flex-direction: row;
     flex-wrap: wrap;
     margin-bottom: 2rem;
+    padding: 17px 0;
     background-color: rgb(248, 247, 247);
     -webkit-box-shadow: 0px 9px 12px 0px rgba(0,0,0,0.19);
     -moz-box-shadow: 0px 9px 12px 0px rgba(0,0,0,0.19);
@@ -553,10 +554,13 @@ h1.ml7.text-wrapper {
     }
 
 @media screen and (max-width:575px){
-    .collapse{
-        flex-direction: column;
-        background-color: #404040;
-        margin: 0;
+    .collapse {
+        background-color: #222a35;
+        display: inline-block;
+        font-size: 1.5rem;
+        margin: 15px -17px;
+        width: 100% !important;
+        padding-left: 20px;
     }
     .title-section{
         font-size: 15px;
@@ -595,25 +599,23 @@ h1.ml7.text-wrapper {
     }
     .bgimg-1 {
         background-image: url('img/schoolm.jpg');
-        /* background-position: center; */
         width: 100%;
         min-height: 400px;
     }
     .bgimg-2 {
         background-image: url('img/routem.jpg');
-        /* background-position: center; */
         width: 100%;
         min-height: 400px;
     }
     .bgimg-3 {
         background-image: url('img/skillsm.jpg');
-        /* background-position: center; */
+
         width: 100%;
         min-height: 400px;
     }
     .bgimg-4 {
         background-image: url('img/contactm.jpg');
-        /* background-position: center; */
+
         width: 100%;
         min-height: 400px;
     }
