--- a/style.css
+++ b/style.css
@@ -452,7 +452,7 @@ h1.ml7.text-wrapper {
   
 /* /////////////////////////////////// WORK //////////////////// */
 .bgimg-5 {
-    background-image: url('img/work.jpeg');
+    background-image: url('img/work.jpg');
     background-position: center;
     min-height: 400px;
     width: 100%;
@@ -462,44 +462,47 @@ h1.ml7.text-wrapper {
     opacity: 0.5;
 }
 
-li{
-    list-style: none;
-  }
-
 .cards{
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
-  
-  .f1_container {
-    position: relative;
-    margin: 50px;
+    text-align: center;
+    /* align-items: center; */
+}
+
+.f1_container {
+    /* display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center; */
+    /* position: relative; */
+    list-style: none;
+    margin-bottom: 50px;
     width: 300px;
     height: 270px;
     z-index: 1;
     perspective: 1000;
-    border-radius: 7px;
-   
-  }
-  
+    
+}
+
 .title-cards{
     text-align: center;
-  }
+}
 
-  .img-cards{
+.img-cards{
     width: 300px;
     height: 230px;
-  }
-  
-  .f1_card {
+}
+
+.f1_card {
     width: 100%;
     height: 100%;
     transform-style: preserve-3d;
     transition: all .5s linear;
-  }
-  
-  .f1_container:hover .f1_card {
+}
+
+.f1_container:hover .f1_card {
     transform: rotateY(180deg);
 }
 
@@ -508,6 +511,7 @@ li{
     width: 100%;
     height: 100%;
     background-color: #fff;
+    border-radius: 7px !important;
     color: #49494e;
     backface-visibility: hidden;
     -webkit-box-shadow: 9px 9px 12px 0px rgba(0,0,0,0.19);
@@ -691,6 +695,13 @@ li{
     }
     .bgimg-4 {
         background-image: url('img/contactm.jpg');
+
+        width: 100%;
+        min-height: 400px;
+    }
+
+    .bgimg-5 {
+        background-image: url('img/workm.jpg');
 
         width: 100%;
         min-height: 400px;
