change color navbar toggler

--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ li a {
     transform: scaleX(1);
 }
 
+.navbar-toggler{
+    border: none;
+}
+
 /* ////////////////////////////////////////////// HOME /////////////////////////////////////////////////// */
 
 .home {
