resize image parallax

--- a/style.css
+++ b/style.css
@@ -696,7 +696,7 @@ h1.ml7.text-wrapper {
         height: 3rem;
     }
     .bgimg-1 {
-        background-image: url('./img/schoolm.jpg');
+        background-image: url('./img/routem.jpg');
         /* width: 100%;
         max-width: 575px;
         min-height: 400px; */
