--- a/style.css
+++ b/style.css
@@ -608,6 +608,51 @@ h1.ml7.text-wrapper {
   
   }
 
+
+  /* ////////////////////////////////////////////// */
+  /* ////////////////////////////////////////////// */
+  /* ////////////////////////////////////////////// */
+  .flip-box {
+    width: 300px;
+    height: 200px;
+    border: 1px solid #f1f1f1;
+    perspective: 200px;
+  }
+  
+  .flip-box-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  .flip-box-front {
+    background-color: #bbb;
+    color: black;
+  }
+  
+  .flip-box-back {
+    background-color: dodgerblue;
+    color: white;
+    transform: rotateY(180deg);
+  }
+  
+  .flip-box-front, .flip-box-back {
+    backface-visibility: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .flip-box:hover .flip-box-inner {
+    transform: rotateY(180deg);
+  }
+  
+  /* ////////////////////////////////////////////// */
+  /* ////////////////////////////////////////////// */
+
 /* /////////////////////////////////////////////////////// MEDIA QUERY ///////////////////////////////////////////////////////// */
 @media (max-width: 123px) { 
     .navbar-header {
