--- a/style.css
+++ b/style.css
@@ -652,7 +652,75 @@ h1.ml7.text-wrapper {
   
   /* ////////////////////////////////////////////// */
   /* ////////////////////////////////////////////// */
-
+  .flipCard {
+    -webkit-perspective: 800;
+    -ms-perspective: 800;
+    -moz-perspective: 800;
+    -o-perspective: 800;
+     width: 400px;
+     height: 200px;
+     position: relative;
+     margin: 50px auto;
+  }
+  .flipCard .card.flipped {
+    transform:rotatey(-180deg);
+    -ms-transform:rotatey(-180deg); /* IE 9 */
+    -moz-transform:rotatey(-180deg); /* Firefox */
+    -webkit-transform:rotatey(-180deg); /* Safari and Chrome */
+    -o-transform:rotatey(-180deg); /* Opera */
+  }
+  .flipCard .card {
+    width: 100%;
+    height: 100%;
+    -webkit-transform-style: preserve-3d;
+    -webkit-transition: 0.5s;
+    -moz-transform-style: preserve-3d;
+    -moz-transition: 0.5s;
+    -ms-transform-style: preserve-3d;
+    -ms-transition: 0.5s;
+    -o-transform-style: preserve-3d;
+    -o-transition: 0.5s;
+    transform-style: preserve-3d;
+    transition: 0.5s;
+  }
+  .flipCard .card .face {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 2;
+    font-family: Georgia;
+    font-size: 3em;
+    text-align: center;
+    line-height: 200px;
+    backface-visibility: hidden;  /* W3C */
+    -webkit-backface-visibility: hidden; /* Safari & Chrome */
+    -moz-backface-visibility: hidden; /* Firefox */
+    -ms-backface-visibility: hidden; /* Internet Explorer */
+    -o-backface-visibility: hidden; /* Opera */
+       box-shadow: 0 0 10px rgba(0,0,0,0.5)
+  
+  }
+  .flipCard .card .front {
+    position: absolute;
+    z-index: 1;
+    background: url(https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/59FRWBNOT5.jpg);
+    background-size: cover;
+    color: white;
+    cursor: pointer;
+  }
+  .flipCard .card .back {
+      background: blue;
+      background: white;
+      color: black;
+      cursor: pointer;
+      
+    transform:rotatey(-180deg);
+    -ms-transform:rotatey(-180deg); /* IE 9 */
+    -moz-transform:rotatey(-180deg); /* Firefox */
+    -webkit-transform:rotatey(-180deg); /* Safari and Chrome */
+    -o-transform:rotatey(-180deg); /* Opera */
+  
+  }
 /* /////////////////////////////////////////////////////// MEDIA QUERY ///////////////////////////////////////////////////////// */
 @media (max-width: 123px) { 
     .navbar-header {
