--- a/style.css
+++ b/style.css
@@ -491,7 +491,7 @@ h1.ml7.text-wrapper {
     width: 300px;
     height: 270px;
     z-index: 1;
-    perspective: 1000 !important;
+    perspective: 1000px !important;
     
 }
 
@@ -500,7 +500,7 @@ h1.ml7.text-wrapper {
 }
 
 .img-cards{
-    width: 300px;
+    width: 100%;
     height: 230px;
 }
 
@@ -508,6 +508,7 @@ h1.ml7.text-wrapper {
     width: 100%;
     height: 100%;
     transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
     transition: all .5s linear;
     -webkit-transition: all .5s linear;
     -moz-transition: all .5s linear;
@@ -517,6 +518,10 @@ h1.ml7.text-wrapper {
 
 .f1_container:hover .f1_card {
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
 }
 
 .face {
